--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,12 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.imagen-ajustada {
+  width: 300px;
+  height: 200px;
+  margin: 10px;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
