--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,11 @@ body {
   margin: 10px;
 }
 
+.responsive-img {
+  width: 100%;
+  height: auto;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
