--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,11 @@ body {
   height: auto;
 }
 
+.responsive-video {
+  width: 100%;
+  height: auto;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
